--- a/src/Components/Freetrial/styles.css
+++ b/src/Components/Freetrial/styles.css
@@ -71,10 +71,30 @@
   /* padding: 24px; */
   position: relative;
 }
+.productdemo_calendarmainContainer {
+  display: flex;
+  position: relative;
+  overflow: hidden;
+  min-height: 425px;
+}
+.productdemo_calendarContainer.expanded {
+  transition: right 0.3s ease-in-out, opacity 0.3s ease-in-out;
+  width: 64%;
+}
 .productdemo_timinigcolcontainer {
-  max-height: 440px;
+  max-height: 425px;
   overflow-y: auto;
   padding: 0px 19px !important;
+
+  position: absolute;
+  right: -100px;
+  width: 36%;
+  opacity: 0;
+  transition: right 0.3s ease-in-out, opacity 0.3s ease-in-out;
+}
+.productdemo_timinigcolcontainer.show {
+  right: 0;
+  opacity: 1;
 }
 .productdemo_timinigcolcontainer::-webkit-scrollbar {
   width: 6px;
@@ -235,4 +255,348 @@
 }
 .productdemo_schedulebutton:hover {
   background-color: #009737;
+}
+
+/* freetrial styles */
+.freetrial_maincontainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow-x: hidden;
+  background-color: #fbfcfd;
+  min-height: 100vh;
+  flex-direction: column;
+}
+.freetrial_hubloglogo {
+  width: 190px;
+  margin-top: 60px;
+}
+.freetrial_card {
+  border: 1px solid rgba(26, 26, 26, 0.1);
+  box-shadow: 0 1px 8px 0 rgb(0 0 0 / 8%);
+  background-color: #ffffff;
+  border-radius: 8px;
+  width: 50%;
+  padding: 35px 50px;
+  margin: 40px 0px 60px 0px;
+}
+@media (min-width: 320px) and (max-width: 700px) {
+  .freetrial_card {
+    width: 90%;
+  }
+}
+.freetrial_signuptext {
+  font-weight: 600;
+  text-align: center;
+  font-size: 22px;
+}
+@media (min-width: 300px) and (max-width: 990px) {
+  .freetrial_rightcolContainer {
+    margin-top: 22px;
+  }
+}
+
+@media (min-width: 300px) and (max-width: 990px) {
+  .freetrial_mobilerightcolContainer {
+    margin-top: 46px;
+  }
+}
+.freetrial_formfields {
+  height: 34px;
+}
+.freetrial_domainfieldContainer {
+  position: relative;
+}
+.freetrial_domainformfield {
+  height: 36px;
+  margin-bottom: 2px;
+}
+.freetrial_domainformfield .ant-input-outlined {
+  border-color: #d9d9d9 !important;
+}
+.freetrial_domainformfield .ant-input-outlined:hover {
+  border-color: #25a17d !important;
+}
+.freetrial_domainformfield .ant-input-outlined:focus-within {
+  border-color: #25a17d !important;
+  box-shadow: 0 0 0 2px #25a17e17 !important;
+}
+.freetrial_domainformfield
+  .ant-input-outlined.ant-input-status-error:not(.ant-input-disabled) {
+  border-color: #ff4d4f !important;
+}
+.freetrial_domainformfield
+  .ant-input-outlined.ant-input-status-error:not(
+    .ant-input-disabled
+  ):focus-within {
+  border-color: #ff4d4f !important;
+  box-shadow: 0 0 0 2px rgba(255, 38, 5, 0.06) !important;
+}
+.freetrial_agreetext {
+  font-size: 13px;
+}
+.freetrial_checkboxContainer {
+  margin-top: 22px;
+  display: flex;
+  gap: 7px;
+  align-items: baseline;
+}
+.freetrial_submitbutton {
+  color: #fff;
+  background-color: #25a17d;
+  box-shadow: 0 2px 0 rgba(88, 5, 255, 0.06);
+  font-size: 15px;
+  width: 40%;
+  font-weight: 600;
+  border-radius: 6px;
+  margin-top: 30px;
+  padding: 7px 0px;
+}
+.freetrial_submitbutton:hover {
+  background-color: #009737;
+}
+.freetrial_submitbutton:active {
+  transform: translateY(2px);
+}
+@media (min-width: 300px) and (max-width: 990px) {
+  .freetrial_submitbutton {
+    width: 90%;
+  }
+}
+/* setpassword styles */
+.setpassword_card {
+  border: 1px solid rgba(26, 26, 26, 0.1);
+  box-shadow: 0 1px 8px 0 rgb(0 0 0 / 8%);
+  background-color: #ffffff;
+  border-radius: 8px;
+  width: 45%;
+  padding: 35px 60px;
+  margin: 40px 0px 60px 0px;
+  position: relative;
+  height: 230px;
+}
+.errorsetpassword_card {
+  border: 1px solid rgba(26, 26, 26, 0.1);
+  box-shadow: 0 1px 8px 0 rgb(0 0 0 / 8%);
+  background-color: #ffffff;
+  border-radius: 8px;
+  width: 45%;
+  padding: 35px 60px;
+  margin: 40px 0px 60px 0px;
+  position: relative;
+  height: 400px;
+}
+@media (min-width: 300px) and (max-width: 700px) {
+  .setpassword_card {
+    width: 80%;
+  }
+}
+@media (min-width: 1000px) and (max-width: 1024px) {
+  .errorsetpassword_card {
+    height: 446px;
+  }
+}
+.setpassword_inputfield {
+  height: 36px;
+  background-color: #ffffff;
+  background-image: none;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #d9d9d9;
+  border-radius: 6px;
+  transition: all 0.2s;
+  width: 100%;
+  margin-top: 19px;
+  margin-bottom: 20px;
+}
+.setpassword_inputfield:hover {
+  border-color: #25a17d !important;
+}
+.setpassword_inputfield:focus-within {
+  border-color: #25a17d !important;
+  box-shadow: 0 0 0 2px #25a17e17;
+}
+.setpassword_submitbuttonContainer {
+  position: absolute;
+  bottom: 34px;
+  width: 80%;
+}
+.setpassword_initialsubmitbuttonContainer {
+  position: absolute;
+  bottom: 34px;
+  width: 81%;
+}
+@media (min-width: 1000px) and (max-width: 1024px) {
+  .setpassword_initialsubmitbuttonContainer {
+    width: 75%;
+  }
+}
+.setpassword_submitbutton {
+  color: #fff;
+  background-color: #25a17d;
+  box-shadow: 0 2px 0 rgba(88, 5, 255, 0.06);
+  width: 100%;
+  font-weight: 600;
+  border-radius: 6px;
+  margin-top: 22px;
+  padding: 7px 0px;
+  display: flex;
+  justify-content: center;
+}
+.setpassword_submitbutton:hover {
+  background-color: #009737;
+}
+.setpassword_submitbutton:active {
+  transform: translateY(2px);
+}
+.setpassword_errordiv {
+  display: flex;
+  font-size: 14px;
+  align-items: center;
+  gap: 6px;
+  margin-bottom: 9px;
+  position: relative;
+}
+.setpassword_checkicon_hide {
+  position: absolute;
+  transform: translateX(-20px);
+  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+  opacity: 0;
+}
+.setpassword_checkicon_visible {
+  transform: translateX(0);
+  opacity: 1;
+  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+}
+.setpassword_wrongicon_visible {
+  transform: translateX(0);
+  opacity: 1;
+  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+}
+.setpassword_wrongicon_hide {
+  position: absolute;
+  transform: translateX(20px);
+  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+  opacity: 0;
+}
+.setpassword_errormainContainer {
+  position: absolute;
+  opacity: 0;
+  transform: translateX(-10%);
+  transition: transform 0.3s ease-in, opacity 0.3s ease-in;
+}
+.setpassword_errormainContainer_show {
+  transform: translateX(0%);
+  transition: transform 0.3s ease-in, opacity 0.3s ease-in;
+  opacity: 1;
+}
+
+/* setpassword styles */
+.congrats_card {
+  border: 1px solid rgba(26, 26, 26, 0.1);
+  box-shadow: 0 1px 8px 0 rgb(0 0 0 / 8%);
+  background-color: #ffffff;
+  border-radius: 8px;
+  width: 40%;
+  padding: 35px 90px;
+  margin: 40px 0px 60px 0px;
+  position: relative;
+}
+.congrats_text {
+  color: gray;
+  font-size: 13px;
+  text-align: center;
+  margin-top: 4px;
+}
+.congrats_submitbutton {
+  color: #fff;
+  background-color: #25a17d;
+  box-shadow: 0 2px 0 rgba(88, 5, 255, 0.06);
+  width: 100%;
+  font-weight: 600;
+  border-radius: 6px;
+  margin-top: 22px;
+  padding: 7px 0px;
+  display: flex;
+  justify-content: center;
+}
+.congrats_submitbutton:hover {
+  background-color: #009737;
+}
+.congrats_submitbutton:active {
+  transform: translateY(2px);
+}
+.congrats_imageContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 16px;
+  position: relative;
+}
+.congrats_image {
+  width: 360px;
+  text-align: center;
+}
+.congrats_icon {
+  position: absolute;
+  top: 36%;
+}
+
+@keyframes confetti-slow {
+  0% {
+    transform: translate3d(0, 0, 0) rotateX(0) rotateY(0);
+  }
+  100% {
+    transform: translate3d(25px, 105vh, 0) rotateX(360deg) rotateY(180deg);
+  }
+}
+
+@keyframes confetti-medium {
+  0% {
+    transform: translate3d(0, 0, 0) rotateX(0) rotateY(0);
+  }
+  100% {
+    transform: translate3d(100px, 105vh, 0) rotateX(100deg) rotateY(360deg);
+  }
+}
+
+@keyframes confetti-fast {
+  0% {
+    transform: translate3d(0, 0, 0) rotateX(0) rotateY(0);
+  }
+  100% {
+    transform: translate3d(-50px, 105vh, 0) rotateX(10deg) rotateY(250deg);
+  }
+}
+
+.confetti-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  perspective: 700px;
+  overflow: hidden;
+}
+
+.confetti {
+  position: absolute;
+  top: -10px;
+  z-index: 1;
+  border-radius: 50%;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.confetti--animation-slow {
+  animation: confetti-slow 3s linear infinite;
+}
+
+.confetti--animation-medium {
+  animation: confetti-medium 2.5s linear infinite;
+}
+
+.confetti--animation-fast {
+  animation: confetti-fast 2s linear infinite;
 }
