--- a/src/components/Reports/styles.css
+++ b/src/components/Reports/styles.css
@@ -59,6 +59,15 @@
   justify-content: center;
   align-items: center;
 }
+.reports_lateiconContainer {
+  background-color: #ffbf0033;
+  color: #fabb00;
+  border-radius: 10px;
+  padding: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .reports_activityiconContainer {
   background-color: #b4c5e9;
   color: #3b5998;
